# ztf_tarball_reader

./: .gitignore  Cargo.toml  README.md
data/ztf_tmp/: 2042451630015010001.avro
src/: main.rs
src/schema/: mod.rs
