[package]
name = "ztf_tarball_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { version = "0.14.0", features = ["derive"] }
clap = { version = "4.4.2", features = ["derive"] }
prettytable-rs = "0.10.0"
rustyline = "12.0.0"
serde = "1.0.188"
serde_bytes = "0.11.12"

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
